@@ -1,3 +1,8 @@
+2010-03-08  Pablo de la Concepción <pablo.concepcion@artica.es>
+
+	* include/functions_gis.php, operation/gis_maps/render_view.php : Changed
+	 some english phrases to make it more clear.
+
 2010-03-08  Miguel de Dios  <miguel.dedios@artica.es>
 
 	* include/javascript/openlayers.pandora.js: deleted the console log debug
